Change deprecated config option.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-env_default = generic
+default_envs = generic
 
 [common]
 platform = https://github.com/platformio/platform-espressif8266.git
