Static Eastern time zone adjustment.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ lib_deps =
   https://github.com/beikeland/Wiegand-Protocol-Library-for-Arduino.git
   Time
   Bounce2
+  Timezone@1.2.4
 
 ; boards which GPIO0 and RESET controlled using two NPN transistors as nodemcu devkit (includes wemos d1 mini)
 [env:generic]
